Add logout link to the menu

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,6 +31,7 @@ html lang="en"
               li= link_to "Link 1", "/path1"
               li= link_to "Link 2", "/path2"
               li= link_to "Link 3", "/path3"
+              li = link_to('Logout', destroy_user_session_path, method: :delete) if user_signed_in? 
 
     .container
       .row
