--- a/app/views/bank_accounts/show.html.slim
+++ b/app/views/bank_accounts/show.html.slim
@@ -1,6 +1,33 @@
-h1 Account Overview:
+h1 Bank account overview:
 strong
-  h3 Name: #{current_user.name}
-  h3 E-mail: #{current_user.email}
-  h3 Account number: #{current_user.bank_account.number}
-  h3 Current balance: #{current_user.bank_account.balance.to_s}
+  h5 Name: #{current_user.name}
+  h5 E-mail: #{current_user.email}
+  - if @account
+    h5 Account number: #{@account.number}
+    h4 Current balance: #{@account.balance.to_f}
+  - model_class = Record
+  .page-header
+    h4=t '.title', :default => model_class.model_name.human.pluralize.titleize
+  table.table.table-striped
+    thead
+      tr
+        th= model_class.human_attribute_name(:id)
+        th= model_class.human_attribute_name(:amount)
+        th= model_class.human_attribute_name(:status)
+        th= model_class.human_attribute_name(:reference)
+        th= model_class.human_attribute_name(:note)
+        th= model_class.human_attribute_name(:bank_account_id)
+        th= model_class.human_attribute_name(:counterpart_id)
+        th= model_class.human_attribute_name(:created_at)
+    tbody
+     - if @records
+        - @records.each do |record|
+          tr
+            td= record.id
+            td= record.amount
+            td= record.status
+            td= record.reference
+            td= record.note
+            td= record.bank_account.number
+            td= record.counterpart.number
+            td= record.created_at
